# hs-stripe

./: .ghci  .gitignore  LICENSE  README.mkd  stripe.cabal
src/Web/Stripe/: Card.hs  Charge.hs  Client.hs  Connect.hs  Coupon.hs  Customer.hs  Discount.hs  Invoice.hs  Plan.hs  Subscription.hs  Token.hs  Utils.hs
