Name:                stripe
Version:             0.1
Synopsis:            A Haskell implementation of the Stripe API.
Description:         This is an implementation of the Stripe API as it is
                     documented at https://stripe.com/docs/api
License:             BSD3
License-file:        LICENSE
Author:              Spearhead Development, L.L.C.
Maintainer:          Michael Schade <michael@spearheaddev.com>
Copyright:           (c) 2011 Spearhead Development, L.L.C.
Category:            Web
Build-type:          Simple
Extra-source-files:  README.mkd
Cabal-version:       >=1.6

Library
  -- Modules exported by the library.
    ghc-options:        -Wall -fwarn-tabs
    Hs-Source-Dirs:     src
    Exposed-modules:      Web.Stripe.Card
                        , Web.Stripe.Charge
                        , Web.Stripe.Client
                        , Web.Stripe.Coupon
                        , Web.Stripe.Customer
                        , Web.Stripe.Plan
                        , Web.Stripe.Subscription
                        , Web.Stripe.Token
                        , Web.Stripe.Utils
    Build-depends:        base          >= 3 && < 5
                        , text          == 0.11.*
                        , json          >= 0.3.6
                        , network       == 2.3.*
                        , time          >= 1.0
                        , http-types    >= 0.2.0
                        , curl          >= 1.3.4
                        , mtl           >= 1.1.0.0
                        , bytestring    >= 0.9
