Name:                stripe
Version:             0.3
Synopsis:            A Haskell implementation of the Stripe API.
Description:         This is an implementation of the Stripe API as it is
                     documented at https://stripe.com/docs/api
License:             BSD3
License-file:        LICENSE
Author:              Spearhead Development, L.L.C.
Maintainer:          Michael Schade <michael@spearheaddev.com>
Copyright:           (c) 2011 Spearhead Development, L.L.C.
Category:            Web
Build-type:          Simple
Extra-source-files:  README.mkd
Cabal-version:       >=1.6

Library
  -- Modules exported by the library.
    ghc-options:        -Wall -fwarn-tabs
    Hs-Source-Dirs:     src
    Exposed-modules:      Web.Stripe.Card
                        , Web.Stripe.Charge
                        , Web.Stripe.Client
                        , Web.Stripe.Connect
                        , Web.Stripe.Coupon
                        , Web.Stripe.Customer
                        , Web.Stripe.Plan
                        , Web.Stripe.Subscription
                        , Web.Stripe.Token
                        , Web.Stripe.Utils
    Build-depends:        base          >= 3 && < 5
                        , text          == 0.11.*
                        , aeson         >= 0.6
                        , unordered-containers >= 0.1.4.6
                        , time          >= 1.0
                        , http-conduit  >= 1.4.1.2
                        , http-types    >= 0.6.11
                        , bytestring    >= 0.9
                        , mtl           >= 2.1
                        , utf8-string   >= 0.3.7
    extensions:         OverloadedStrings, TupleSections
